# dict-extractor

./: LICENSE  README.md  README.txt  extractor.py  setup.cfg  tests.py
dict_extractor/: extractor.py  tests.py
dict_extractor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
