[metadata]
name = dict_extractor
version = 0.0.1
author = Jericho Locke
author_email = jljericho@gmail.com
description = For idiomatically extracting certain items from a dictionary
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jljericho/dict-extractor
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.5